BXC-4429 use string utils is blank